# Semantixel-Semantic_Image_Retrieval

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.yaml  config.yaml  create_index.py  main.py  pyproject.toml  requirements.txt  run_offline.bat  run_offline.ps1  run_offline.sh  rust_integration.py  server.py  settings.py  setup.ps1  setup.sh  verify_integration.py  wsgi.py
.github/: dependabot.yml
CLIP/: hftransformers_clip.py  mobile_clip.py
Index/: create_db.py  paths.csv  scan.py  scan_default.py  video_utils.py
UI/: README.md
UI/Flow Launcher/Semantixel-0.1-flowlauncher/: main.py  plugin.json
UI/Flow Launcher/Semantixel-0.1-flowlauncher/plugin/: main.py
UI/Semantixel WebUI/: index.html  styles.css
cmd/scanner/: go.mod  main.go  scanner.go
docs/: 01_Introduction.md  02_System_Architecture.md  03_Model_Design.md  04_DataPipeline_and_Preprocessing.md  05_Feature_Extraction_and_Embedding.md  06_Semantic_Search_and_Retrieval.md  07_User_Interface_and_API.md  08_Evaluation_and_Performance.md  09_Deployment_and_Usage.md  10_Future_Work_and_Improvements.md  11_gRPC_Inference_Service.md  glossary.md
face_db/: known_faces.pkl
face_recognition/: face_encoder.py  face_search.py  integrated_search.py
ocr_model/: OCR.py
proto/: semantixel_inference.proto
scripts/: generate_proto.py
semantixel/: __init__.py  grpc_server.py  media.py  media_types.py
semantixel/api/: __init__.py  routes.py
semantixel/core/: __init__.py  config.py  device.py  logging.py  security.py
semantixel/providers/: __init__.py  base.py  registry.py
semantixel/providers/audio/: __init__.py  clap_provider.py  faster_whisper_provider.py  hf_audio_provider.py
semantixel/providers/clip/: __init__.py  hf_provider.py
semantixel/providers/ocr/: doctr_provider.py
semantixel/providers/text/: __init__.py  hf_provider.py
semantixel/services/: __init__.py  audio_indexer.py  bm25_service.py  face_service.py  graph_service.py  image_indexer.py  index_cleanup.py  index_service.py  media_scanner.py  model_manager.py  search_service.py
semantixel/sources/: __init__.py  google_drive_source.py
semantixel/utils/: __init__.py  audio_utils.py  scan_utils.py  video_utils.py
semantixel_rust/: Cargo.toml
semantixel_rust/src/: csv_handler.rs  errors.rs  image_processor.rs  lib.rs  scanner.rs
settings/: clip_manager.py  config_manager.py  ocr_manager.py  text_embed_manager.py
text_embeddings/: bm25_search.py  hftransformers_embeddings.py
