[package]
name = "semantixel-scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "semantixel_scanner"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
walkdir = "2.4"
csv = "1.3"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
memmap2 = "0.9"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
